[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Fonts/font_heading_2.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Fonts/font_heading_1.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/StageSelect.gd" type="Script" id=3]

[node name="StageSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
level_1 = "Level 1"
level_2 = "Level 2"
back_scene = "Main Menu"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 924.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 858.0
margin_bottom = 500.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 858.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 2 )
text = "Select Level"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 858.0
margin_bottom = 369.0
custom_constants/separation = 30

[node name="Level 1" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 858.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Level 1"

[node name="Level 2" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 858.0
margin_bottom = 134.0
focus_mode = 2
custom_fonts/font = ExtResource( 1 )
text = "Level 2"

[node name="Back" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 858.0
margin_bottom = 216.0
focus_mode = 2
custom_fonts/font = ExtResource( 1 )
text = "Back"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 862.0
margin_right = 862.0
margin_bottom = 500.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/Level 2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
